
export interface BodyPosition {
    id: string;

    x: number;
    y: number;
    width: number;
    height: number;

    label: string;
}
