import { BodyArea, BodyAreaType } from '../../body/body-area-data.model';
import { HealthcheckTask } from '../healthcheck-task.model';

export class PainAreaChoice {
    bodyArea: BodyAreaType;
    more: string;
}
