export declare type PainAssessmentChoiceType = 'less' | 'equal' | 'more';

export class PainAssessmentChoice {
    less: string;
    equal: string;
    more: string;
}
