import { HealthcheckTask } from '../healthcheck-task.model';

export class ReplugHealthcheckTask extends HealthcheckTask {
    linkedTaskId: string;
}
