export interface Exercise {
    id: string;
    name: string;
    advice: string;
    videolink: string;
    redoInfo: string;
}
