@startuml

package domain {
    package body {

        class BodyArea {
            type: BodyAreaType
            name: string
            position: BodyPosition
        }

        enum BodyAreaType {
            + lombaire-bar
            + lombaire-zone
            + lombaire-unilateral

            + fessiers
            + sacro-illiaque
        }

        class BodyPosition {
            x: number
            y: number
        }

        BodyArea -r-> BodyAreaType
        BodyArea --> BodyPosition
    }

    package pain {

        class Pain {
            name: BodyArea
            scale: PainScale
        }

        enum PainScale {
            + more
            + less
            + equals
        }

        Pain --> PainScale
        Pain -r-> BodyArea
    }

    class Exercise {
        name: string
        info: Info
        videolink: string
        redoInfo: string
    }

    class Diagnosis {
        title: string
        name: string
        info: string
    }
}

package treatment {

    class Healthcheck {
        bodyArea: BodyAreaType
        task: HealthcheckTask;
    }

    class HealthcheckTask {
        taskId: string
        type: HealthcheckTaskType
    }

    enum HealthcheckTaskType {
        + exercise
        + diagnosis
        + consult
        + replug
        + test-location
        + change-location
        '+ pain-assessment
    }

    class ExerciseHealthcheckTask {
        exerciseId: string
        choice: PainAssessmentChoice
    }

    class DiagnosisHealthcheckTask {
        diagnosisId: string
    }

    class ReplugHealthcheckTask {
        linkedTaskId: string
    }

    class ChangeLocationHealthcheckTask {
        treatmentId: string
    }

    class TestLocationHealthcheckTask {
        painChoices: PainAreaChoice[]
    }

    class PainAssessmentChoice {
        name: string
        bodyArea: BodyArea

        less: HealthcheckTask
        equal: HealthcheckTask
        more: HealthcheckTask
    }

    class PainAreaChoice {
        id: string
        bodyArea: BodyArea
        more: HealthcheckTask
    }


    Healthcheck --> "*" HealthcheckTask

    HealthcheckTask -u-> HealthcheckTaskType

    HealthcheckTask <|-- ExerciseHealthcheckTask
    HealthcheckTask <|-- DiagnosisHealthcheckTask
    HealthcheckTask <|-- ReplugHealthcheckTask
    HealthcheckTask <|-- TestLocationHealthcheckTask
    HealthcheckTask <|--  ChangeLocationHealthcheckTask

    ExerciseHealthcheckTask -u-> PainAssessmentChoice
    TestLocationHealthcheckTask -u-> PainAreaChoice

    PainAssessmentChoice -r-> HealthcheckTask
    PainAreaChoice -l-> HealthcheckTask
}

@enduml
